src-core/src/components/list-group/list-group.scss
@import "../../theme/theme";
@import "../list-item/list-item";

:host {
  @include flex-direction(column);
}

.group-item{
  overflow: hidden;
  padding-bottom: 0;
}

.se-list-group {
  list-style-type: none;
  margin: 0;
  padding: 0;
  &.classic, &.nav {
    button {
      min-height: 47px;
      height: 20px; // IE fix so flexbox vertical alignment works
      max-width: 100%;
    }
  }

  &.treeview {
    button {
      padding: 5.5px 0;
      .nav-icon {
        margin: -3px -8px -3px 4px;
        + .nav-content {
          padding-left: 2px;
        }
      }
    }
    .nav-content {
      padding-left: 0;
    }
    // Align right-caret icon on MS Edge.
    // Will remove when Chromium-based Edge browser is released.
    @supports (-ms-ime-align:auto) {
      se-icon {
        line-height: inherit;
        top: 0;
      }
    }
  }

  &.headline {
    .nav-content {
      font-size: 16px;
    }
    button{
      height: 47px;
      background-color: $se-ultra-light-grey-2;
    }
  }

  &.collapsed {
    .group-item {
      display: none;
    }
  }

  button.selected {
    @include color('selected-contrast');
    @include background-color('selected');
    &:hover, &:focus{
    background-color: $se-ultra-dark-grey;
    }
  }
  // change the background-color when design team decides
  button.selectedChild {
    @include color('selected-contrast');
    @include background-color('selected');
    &:hover, &:focus{
    background-color:$se-ultra-dark-grey;
    }
  }
}

.se-list-group.treeview {
  .nav-icon {
    margin-right: 0;
    margin-left: -4px;
  }
  .nav-content {
    margin-right: 8px;
  }
  se-icon {
    margin: -4px 0;
  }
}
.se-list-group.dropdown button {
  margin-top: -1px;
}

